Fixes prism z-index issue

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -78,6 +78,7 @@ a {
 
 pre[class*=language-] {
   overflow: auto !important;
+  z-index: 0;
 }
 
 .flow > * + * {
